Fixed name, also version 1.3

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">lolololololol</string>
+    <string name="app_name">VineCorrupt</string>
     <string name="hello_world">Welcome to the VineCorrupt Android port! Thanks for downloading, and I hope you enjoy!
 	Credits:
 	Original program by Maiddog
